// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IonTabGroup Sizes should render tabs with lg size 1`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 12px 32px;
  font-size: 1.6rem;
  line-height: 2.4rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
  color: #0858ce;
  border-color: #0858ce;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

.c0 svg {
  fill: #0858ce;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 1
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with lg size 2`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 12px 32px;
  font-size: 1.6rem;
  line-height: 2.4rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 2
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with lg size 3`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 12px 32px;
  font-size: 1.6rem;
  line-height: 2.4rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 3
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with md size 1`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 10px 24px;
  font-size: 1.4rem;
  line-height: 2rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
  color: #0858ce;
  border-color: #0858ce;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

.c0 svg {
  fill: #0858ce;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 1
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with md size 2`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 10px 24px;
  font-size: 1.4rem;
  line-height: 2rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 2
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with md size 3`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 10px 24px;
  font-size: 1.4rem;
  line-height: 2rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 3
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with sm size 1`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 8px 16px;
  font-size: 1.2rem;
  line-height: 1.6rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
  color: #0858ce;
  border-color: #0858ce;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

.c0 svg {
  fill: #0858ce;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 1
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with sm size 2`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 8px 16px;
  font-size: 1.2rem;
  line-height: 1.6rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 2
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with sm size 3`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 8px 16px;
  font-size: 1.2rem;
  line-height: 1.6rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 3
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with sm size by default 1`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 8px 16px;
  font-size: 1.2rem;
  line-height: 1.6rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
  color: #0858ce;
  border-color: #0858ce;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

.c0 svg {
  fill: #0858ce;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 1
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with sm size by default 2`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 8px 16px;
  font-size: 1.2rem;
  line-height: 1.6rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 2
  </span>
</button>
`;

exports[`IonTabGroup Sizes should render tabs with sm size by default 3`] = `
.c0 {
  font-weight: 600;
  color: #505566;
  background: #fcfcfd;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding: 8px 16px;
  font-size: 1.2rem;
  line-height: 1.6rem;
  border-bottom: 2px solid;
  border-radius: 6px 6px 0px 0px;
  border-color: #ced2db;
}

.c0:focus-visible {
  outline: 2px solid #146ff5;
  outline-offset: 2px;
}

.c0 svg {
  fill: #505566;
}

.c0:hover,
.c0:focus-visible {
  color: #146ff5;
  background: #ebf3fe;
  border-color: #84b4fa;
}

.c0:hover svg,
.c0:focus-visible svg {
  fill: #146ff5;
}

.c0:active {
  color: #06439d;
  background: #b5d2fc;
  border-color: #146ff5;
}

.c0:active svg {
  fill: #06439d;
}

.c0:disabled {
  color: #aeb2bd;
  background: #e4e6eb;
  border-color: #aeb2bd;
  cursor: not-allowed;
}

.c0:disabled svg {
  fill: #aeb2bd;
}

<button
  class="c0"
  data-testid="ion-tab"
>
  <span>
    Tab 3
  </span>
</button>
`;
